Fixing alignment

--- a/src/components/Trends/Explore/TrendsExploreSearch.module.scss
+++ b/src/components/Trends/Explore/TrendsExploreSearch.module.scss
@@ -5,5 +5,4 @@
 
 .search {
   margin-right: 1rem;
-  width: 430px;
 }
